fix scrollbar issue

--- a/components/DetailedCTA/index.sass
+++ b/components/DetailedCTA/index.sass
@@ -3,9 +3,10 @@
 @import '../../styles/utilities/colors'
 
 @import '../CTA/index'
-    
+
 .cta
   &.detailed
+    overflow: hidden
     .container
       +tablet
         max-width: 68rem
@@ -30,4 +31,3 @@
               margin-bottom: .5rem
             p
               font-size: .9rem
-  
